--- a/src/main/docker/Dockerfile.native
+++ b/src/main/docker/Dockerfile.native
@@ -7,11 +7,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native -t quarkus/kogito-scratch .
+# docker build -f src/main/docker/Dockerfile.native -t quarkus/kogito-person .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/kogito-scratch
+# docker run -i --rm -p 8080:8080 quarkus/kogito-person
 #
 ###
 FROM registry.access.redhat.com/ubi8/ubi-minimal:8.9
