--- a/src/main/docker/Dockerfile.native-micro
+++ b/src/main/docker/Dockerfile.native-micro
@@ -10,11 +10,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native-micro -t quarkus/kogito-scratch .
+# docker build -f src/main/docker/Dockerfile.native-micro -t quarkus/kogito-person .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/kogito-scratch
+# docker run -i --rm -p 8080:8080 quarkus/kogito-person
 #
 ###
 FROM quay.io/quarkus/quarkus-micro-image:2.0
