--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,16 @@
 # quarkus.package.type=uber-jar
 
 #quarkus.http.port=8085
+
+# %postgresql.kogito.persistence.type=jdbc
+# %postgresql.quarkus.datasource.db-kind=postgresql
+# %postgresql.quarkus.datasource.username=kogito-user
+# %postgresql.quarkus.datasource.password=kogito-pass
+# %postgresql.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/kogito
+# %postgresql.quarkus.kogito.devservices.enabled=false
+# %postgresql.quarkus.flyway.migrate-at-start=true
+
+# %infinispan.kogito.persistence.type=infinispan
+# %infinispan.quarkus.infinispan-client.hosts=localhost:11222
+# %infinispan.quarkus.infinispan-client.use-auth=false
+# %infinispan.quarkus.kogito.devservices.enabled=false
